# scraper

./: README.md  ai_companies_map.html  config.py  cspell.json  geocode.py  main.py  mapping.py  pyproject.toml  scrape.py  utils.py
outputs/: ai_companies.csv  ai_companies_map.html
