[project]
name = "scraper"
version = "0.1.0"
description = "Beautiful Soup demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
]

[tool.pylint.messages_control]
disable = ["broad-exception-caught"]
